# toga

android/: pyproject.toml
android/src/toga_android/widgets/: detailedlist.py  selection.py  table.py
changes/: 2687.feature.md  4064.removal.md  4091.feature.2.md  4091.removal.1.md  4091.removal.2.md  4112.removal.md
cocoa/: pyproject.toml
cocoa/src/toga_cocoa/widgets/: detailedlist.py  selection.py  table.py  tree.py
core/src/toga/: factory.py  icons.py  platform.py
core/src/toga/sources/: base.py  columns.py  list_source.py  tree_source.py
core/src/toga/widgets/: base.py  selection.py  table.py  tree.py
core/tests/: test_platform.py
core/tests/app/: test_app.py
core/tests/sources/: test_columns.py  test_list_source.py  test_node.py  test_source.py  test_tree_source.py
core/tests/widgets/: test_selection.py  test_table.py  test_tree.py
demo/toga_demo/: app.py
docs/: config.yml
docs/en/reference/data/: apis_by_platform.yaml
docs/en/topics/: backends.md  extending-toga.md  index.md
dummy/: pyproject.toml
dummy/src/toga_dummy/widgets/: detailedlist.py  selection.py  table.py  tree.py
examples/customwidget/: pyproject.toml
examples/customwidget/helloworld/: pyproject.toml
examples/customwidget/helloworld/hello_world_widget/: web_hello_world.py
examples/examples_overview/examples_overview/: app.py
examples/screenshot/screenshot/: app.py
examples/table_columns/: README.rst  pyproject.toml
examples/table_columns/table_columns/: app.py
examples/table_source/table_source/: app.py
gtk/: pyproject.toml
gtk/src/toga_gtk/widgets/: detailedlist.py  selection.py  table.py  tree.py
iOS/: pyproject.toml
iOS/src/toga_iOS/widgets/: detailedlist.py  selection.py
qt/: pyproject.toml
qt/src/toga_qt/: factory.py
qt/src/toga_qt/hardware/: camera.py  (+2 more)
testbed/: pyproject.toml
testbed/tests/: conftest.py
testbed/tests/app/: test_app.py
testbed/tests/widgets/: test_canvas.py  test_table.py  test_tree.py  test_webview.py
textual/: pyproject.toml
web/: pyproject.toml
winforms/: pyproject.toml
(+14 files in other folders)
